[package]
name = "async-brigade"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "io-util", "macros", "rt-core", "uds" ] }
libc = "0.2"
utils = { path = "../utils" }
