[package]
name = "async-mem-brigade"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = [ "full" ] }
libc = "0.2"
utils = { path = "../utils" }
