[package]
name = "thread-brigade"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
utils = { path = "../utils" }
